k8s/items.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: items
  namespace: restauranty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: items
  template:
    metadata:
      labels:
        app: items
    spec:
      containers:
        - name: items
          image: sanasiddiqui115/restauranty-items:d0e4685
          ports:
            - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: items
  namespace: restauranty
spec:
  ports:
    - port: 3003
      targetPort: 3003
  selector:
    app: items
